<resources>
    <string name="app_name">FastFood</string>
    <string name="fragment_search_search_view_hint">Search store, food, place…</string>
    <string name="no_internet_connection">No network connect, Please check your connection.</string>
    <string name="button_close">Close</string>
    <string name="load_data_error">Oops! Something wrong. Try it later!</string>
    <string name="text_view_text_see_more">See More</string>
    <string name="nearly_store_text">Nearly stores</string>
    <string name="text_point">%d points</string>
    <string name="number_of_like">%d likes</string>
    <string name="text_view_dash">-</string>
    <string name="number_of_comment">%d comments</string>
    <string name="topic_empty_message">These is no topics in this section, please move to other! :)</string>
    <string name="edit_text_hint_username">Username</string>
    <string name="edit_text_hint_password">Password</string>
    <string name="button_text_login">Sign In</string>
    <string name="button_text_login_with_facebook">Sign in with Facebook</string>
    <string name="text_view_text_or">OR</string>
    <string name="text_view_text_no_account_yet">No account yet?</string>
    <string name="text_view_text_create_new_one">Create new one</string>
    <string name="text_view_text_login">Login</string>
    <string name="text_view_text_login_description">Join with us to evaluate your favorite restaurant, to follow someone you like and post some topics to share anything you know about food, and even more…</string>
    <string name="text_view_text_join_with_us">Join with us</string>
    <string name="text_view_text_close">Close</string>
    <string name="logout">Logout</string>
    <string name="header_bar_setting">Setting</string>
    <string name="username_is_required">Username is required</string>
    <string name="password_is_required">Password is required</string>
    <string name="button_text_register">Register</string>
    <string name="edit_text_hint_email">Email</string>
    <string name="button_text_back">Back</string>
    <string name="email_is_required">Email is required</string>
    <string name="not_an_email">Email address is invalid</string>
    <string name="title_image_gallery">%s\'s images</string>
    <string name="item_comment_text_view_reply">Reply</string>
    <string name="item_comment_text_view_delete">Delete</string>
    <string name="sending_comment">Sending Comment…</string>
    <string name="comment_error">Error</string>
    <string name="comment_is_required">Comment field is required</string>
    <string name="comment_topic">Add comment</string>
    <string name="confirm_delete_comment">Do you want to delete this comment?</string>
    <string name="delete_button">Delete</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_text_submit">Submit</string>
    <string name="rating_title_text">Rating %s</string>
    <string name="rating_type_empty">There is no rating type!</string>
    <string name="empty_store_place_detail">There is no store in this area yet. Please check out another!</string>
    <string name="empty_province_place_detail">There is no province in this city. Please check out another!</string>
    <string name="empty_food_place_detail">There is no food in this area. Please check out another!</string>
    <string name="current_position">Your current position</string>
    <string name="cant_get_location">Can\'t get your current location!</string>
    <string name="cant_get_direction">Can\'t find the direction</string>
    <string name="store_place_text">%s\'s address</string>
    <string name="empty_image_gallery">No Images.</string>
    <string name="wrong_qr_type">Not our QR image!</string>
    <string name="food_is_nothing">Food is nothing</string>
    <string name="people_is_nothing">People has nothing</string>
    <string name="store_is_nothing">Store is nothing</string>
    <string name="topic_is_nothing">Topic is nothing</string>
    <string name="camera_permission_denied">Please accept camera permission to scan QR code</string>
    <string name="setting_update_profile">Update Profile</string>
    <string name="text_view_text_change_avatar">Change avatar</string>
    <string name="edit_text_hint_full_name">FullName</string>
    <string name="edit_text_hint_description">Description</string>
    <string name="text_view_text_update_profile">Update Profile</string>
    <string name="setting_language">Language</string>
    <string name="setting_language_english">English</string>
    <string name="setting_language_vietnamese">Vietnamese</string>
    <string name="textview_text_ok" translatable="false">OK</string>
</resources>
