<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="20dp"
        android:text="@string/text_view_text_login"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <View
        android:id="@+id/titleDivider"
        style="@style/ViewLine"
        android:layout_below="@id/tvTitle" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleDivider"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center|start|end"
        android:padding="20dp"
        android:text="@string/text_view_text_login_description"
        android:textColor="@android:color/black"
        android:textSize="14sp" />

    <View
        android:id="@+id/dividerDescription"
        style="@style/ViewLine"
        android:layout_below="@id/tvDescription" />

    <TextView
        android:id="@+id/btnJoin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dividerDescription"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/text_view_text_join_with_us"
        android:textColor="@android:color/black" />

    <View
        android:id="@+id/dividerButton"
        style="@style/ViewLine"
        android:layout_below="@id/btnJoin" />

    <TextView
        android:id="@+id/btnClose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dividerButton"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/text_view_text_close"
        android:textColor="@android:color/black" />
</RelativeLayout>
