<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:textColor="@android:color/black" />

    <View style="@style/ViewLine" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="15dp">

        <RadioButton
            android:id="@+id/rbVietnamese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_flag_vietnamese"
            android:text="@string/setting_language_vietnamese" />

        <RadioButton
            android:id="@+id/rbEnglish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_flag_us"
            android:text="@string/setting_language_english" />
    </RadioGroup>

    <View style="@style/ViewLine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/button_cancel"
            android:textColor="@android:color/black" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#dbdbdb" />

        <TextView
            android:id="@+id/tvOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/textview_text_ok"
            android:textColor="@android:color/black" />
    </LinearLayout>
</LinearLayout>