<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/img_login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/bg_login"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@null"
            android:src="@drawable/ic_splash" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/white">

            <EditText
                android:id="@+id/edtUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/edit_text_hint_username"
                android:paddingBottom="10dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:textColor="@android:color/white"
                android:textSize="15sp" />
        </android.support.design.widget.TextInputLayout>

        <View style="@style/ViewLine" />


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColorHint="@android:color/white">

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/edit_text_hint_password"
                android:inputType="textPassword"
                android:paddingBottom="10dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:paddingTop="20dp"
                android:textColor="@android:color/white"
                android:textSize="15sp" />
        </android.support.design.widget.TextInputLayout>

        <View style="@style/ViewLine" />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_button_login"
            android:padding="15dp"
            android:text="@string/button_text_login"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:paddingTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_text_no_account_yet"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/tvCreateNewAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/text_view_text_create_new_one"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/tvOrDivider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/text_view_text_or"
                android:textColor="@android:color/white" />

            <View
                style="@style/ViewLine"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/tvOrDivider" />

            <View
                style="@style/ViewLine"
                android:layout_centerVertical="true"
                android:layout_marginEnd="5dp"
                android:layout_toStartOf="@id/tvOrDivider" />
        </RelativeLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnFacebookLoginInterface"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_button_login"
                android:drawableStart="@drawable/ic_facebook"
                android:padding="15dp"
                android:text="@string/button_text_login_with_facebook"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <com.facebook.login.widget.LoginButton
                android:id="@+id/btnFacebookLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />
        </FrameLayout>
    </LinearLayout>
</RelativeLayout>
